// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createConfig allowedHosts option (devServer config) 1`] = `
Object {
  "allowedHosts": Array [
    ".host.com",
    "host2.com",
  ],
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig allowedHosts option 1`] = `
Object {
  "allowedHosts": Array [
    ".host.com",
    "host2.com",
  ],
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig bonjour option (devServer config) 1`] = `
Object {
  "bonjour": true,
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig bonjour option 1`] = `
Object {
  "bonjour": true,
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig clientLogLevel option (in devServer config) 1`] = `
Object {
  "clientLogLevel": "none",
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig clientLogLevel option 1`] = `
Object {
  "clientLogLevel": "none",
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig compress option (in devServer config) 1`] = `
Object {
  "compress": true,
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig compress option 1`] = `
Object {
  "compress": true,
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig contentBase option (array) 1`] = `
Object {
  "contentBase": Array [
    "assets",
    "static",
  ],
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig contentBase option (boolean) 1`] = `
Object {
  "contentBase": false,
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig contentBase option (string) (in devServer config) 1`] = `
Object {
  "contentBase": "assets",
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig contentBase option (string) 1`] = `
Object {
  "contentBase": "assets",
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig disableHostCheck option (in devServer config) 1`] = `
Object {
  "disableHostCheck": true,
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig disableHostCheck option 1`] = `
Object {
  "disableHostCheck": true,
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig historyApiFallback option (in devServer config) 1`] = `
Object {
  "historyApiFallback": true,
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig historyApiFallback option 1`] = `
Object {
  "historyApiFallback": true,
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig host option (devServer config) 1`] = `
Object {
  "host": "example.dev",
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig host option (localhost) 1`] = `
Object {
  "host": "localhost",
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig host option (null) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig host option (specify for CLI and devServer config) 1`] = `
Object {
  "host": "other.dev",
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig host option (undefined) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig host option 1`] = `
Object {
  "host": "example.dev",
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig hot option (in devServer config) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig hot option 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig http2 option (in devServer config) 1`] = `
Object {
  "hot": true,
  "http2": true,
  "https": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig http2 option 1`] = `
Object {
  "hot": true,
  "http2": true,
  "https": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig https option (in devServer config) 1`] = `
Object {
  "hot": true,
  "https": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig https option (in devServer config) 2`] = `
Object {
  "hot": true,
  "https": Object {
    "ca": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig https option 1`] = `
Object {
  "hot": true,
  "https": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig https option 2`] = `
Object {
  "hot": true,
  "https": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig info option 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig liveReload option 1`] = `
Object {
  "hot": true,
  "liveReload": false,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig mimeTypes option - with force 1`] = `
Object {
  "hot": true,
  "mimeTypes": Object {
    "force": true,
    "typeMap": Object {
      "text/html": Array [
        "phtml",
      ],
    },
  },
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig mimeTypes option 1`] = `
Object {
  "hot": true,
  "mimeTypes": Object {
    "text/html": Array [
      "phtml",
    ],
  },
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig onListening option 1`] = `
Object {
  "hot": true,
  "onListening": [Function],
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig open option (boolean) (in devServer config) 1`] = `
Object {
  "hot": true,
  "open": true,
  "openPage": "",
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig open option (boolean) 1`] = `
Object {
  "hot": true,
  "open": true,
  "openPage": "",
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig open option (object) 1`] = `
Object {
  "hot": true,
  "open": Object {
    "app": Array [
      "Google Chrome",
      "--incognito",
    ],
  },
  "openPage": "",
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig open option (string) 1`] = `
Object {
  "hot": true,
  "open": "Google Chrome",
  "openPage": "",
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig openPage multiple option (in devServer config) 1`] = `
Object {
  "hot": true,
  "open": true,
  "openPage": Array [
    "/different/page",
    "/different/page2",
  ],
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig openPage option (in devServer config) 1`] = `
Object {
  "hot": true,
  "open": true,
  "openPage": "/different/page",
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig openPage option 1`] = `
Object {
  "hot": true,
  "open": true,
  "openPage": Array [
    "/different/page",
  ],
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig overlay option (in devServer config) 1`] = `
Object {
  "hot": true,
  "overlay": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig overlay option 1`] = `
Object {
  "hot": true,
  "overlay": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig port option (difference) 1`] = `
Object {
  "hot": true,
  "port": 7070,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig port option (same) (null) 1`] = `
Object {
  "hot": true,
  "port": null,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig port option (same) (string) 1`] = `
Object {
  "hot": true,
  "port": "9090",
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig port option (same) (undefined) 1`] = `
Object {
  "hot": true,
  "port": undefined,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig port option (same) 1`] = `
Object {
  "hot": true,
  "port": 9090,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig profile option 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "profile": "profile",
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig progress option (devServer config) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "progress": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig progress option 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "progress": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig public option (devServer config) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "public": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig public option 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "public": true,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig publicPath option (not specify) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig publicPath option (path in devServer option) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig publicPath option (path in output option) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig publicPath option (path without starting slash in output option) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig publicPath option (url in devServer option) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "http://localhost:8080/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig publicPath option (url in output option) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "http://localhost:8080/assets/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig simple 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig socket option (devServer config) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "socket": "socket",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig socket option 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "socket": "socket",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
}
`;

exports[`createConfig stats option (colors) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "colors": true,
    "errors": true,
  },
}
`;

exports[`createConfig stats option 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": "errors-only",
}
`;

exports[`createConfig use webpack stats 1`] = `
Object {
  "clientLogLevel": "_clientLogLevel",
  "compress": "_compress",
  "contentBase": "_contentBase",
  "disableHostCheck": "_disableHostCheck",
  "historyApiFallback": "_historyApiFallback",
  "host": "_foo",
  "hot": "_hot",
  "https": "_https",
  "open": "_open",
  "openPage": "_openPage",
  "port": "_port",
  "progress": "_progress",
  "public": "_public",
  "publicPath": "_publicPath",
  "socket": "_socket",
  "stats": Object {
    "assetsSort": "size",
  },
  "useLocalIp": "_useLocalIp",
  "watchContentBase": "_watchContentBase",
}
`;

exports[`createConfig use webpack stats 2`] = `
Object {
  "devServer": Object {
    "clientLogLevel": "_clientLogLevel",
    "compress": "_compress",
    "contentBase": "_contentBase",
    "disableHostCheck": "_disableHostCheck",
    "historyApiFallback": "_historyApiFallback",
    "host": "_foo",
    "hot": "_hot",
    "https": "_https",
    "open": "_open",
    "openPage": "_openPage",
    "port": "_port",
    "progress": "_progress",
    "public": "_public",
    "publicPath": "_publicPath",
    "socket": "_socket",
    "stats": Object {
      "assetsSort": "size",
    },
    "useLocalIp": "_useLocalIp",
    "watchContentBase": "_watchContentBase",
  },
  "entry": "./app.js",
  "mode": "development",
  "stats": Object {
    "assetsSort": "size",
  },
}
`;

exports[`createConfig useLocalIp option (in devServer config) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "useLocalIp": true,
}
`;

exports[`createConfig useLocalIp option 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "useLocalIp": true,
}
`;

exports[`createConfig watchContentBase option (in devServer config) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "watchContentBase": true,
}
`;

exports[`createConfig watchContentBase option 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "watchContentBase": true,
}
`;

exports[`createConfig watchOptions option (in devServer config) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "watchOptions": Object {
    "poll": true,
  },
}
`;

exports[`createConfig watchOptions option (in output config) 1`] = `
Object {
  "hot": true,
  "port": 8080,
  "publicPath": "/",
  "stats": Object {
    "cached": false,
    "cachedAssets": false,
  },
  "watchOptions": Object {
    "poll": true,
  },
}
`;
